<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="388dp"
        android:layout_height="595dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="79dp"
            android:layout_marginEnd="301dp"
            android:layout_marginBottom="361dp"
            android:text="@string/texto_usuario"
            android:textColor="@android:color/black"
            android:textColorLink="@color/common_google_signin_btn_text_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.398" />

        <EditText
            android:id="@+id/edtusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="344dp"
            android:ems="10"
            android:hint="@string/hint_usuario"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="301dp"
            android:layout_marginBottom="292dp"
            android:text="@string/texto_contraseña"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@color/common_google_signin_btn_text_light_default"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.411" />

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="267dp"
            android:ems="10"
            android:hint="@string/hint_contraseña"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/edtusuario"
            app:layout_constraintVertical_bias="0.505" />

        <Button

            android:id="@+id/btningresar"
            android:layout_width="179dp"
            android:layout_height="54dp"
            android:layout_marginStart="93dp"
            android:layout_marginLeft="93dp"
            android:layout_marginTop="107dp"
            android:layout_marginEnd="116dp"
            android:layout_marginRight="116dp"
            android:text="@string/texto_iniciar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtpassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>